Potvrda mail adrese pri registraciji

--- a/Implementacija/Teatar18_2/Teatar18_2/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/Implementacija/Teatar18_2/Teatar18_2/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -16,7 +16,7 @@
     else
     {
 <p>
-        Please check your email to confirm your account.
+        Provjerite Vaš inbox kako biste potvrdili mail adresu.
 </p>
     }
 }
