css, newsletter kod registracije i autorizacija za izvedbe, predstave i rezervacije

--- a/Implementacija/Teatar18_2/Teatar18_2/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Implementacija/Teatar18_2/Teatar18_2/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,6 +5,10 @@
     ViewData["Title"] = "Prijava";
 }
 
+<head>
+    <link rel="stylesheet" href="~/css/site.css" />
+</head>
+
 <h1>@ViewData["Title"]</h1>
 <div class="row">
     <div class="col-md-4">
@@ -30,14 +34,15 @@
                     </label>
                 </div>
                 <div>
-                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Prijava</button>
+                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary my-button">Prijava</button>
                 </div>
+                <br />
                 <div>
                     <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">Zaboravili ste password?</a>
+                        <a class="my-link" id="forgot-password" asp-page="./ForgotPassword">Zaboravili ste password?</a>
                     </p>
                     <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Nemate korisnički račun?</a>
+                        <a class="my-link" asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Nemate korisnički račun?</a>
                     </p>           
                 </div>
             </form>
