--- a/Implementacija/Teatar18_2/Teatar18_2/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/Implementacija/Teatar18_2/Teatar18_2/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -5,6 +5,10 @@
     ViewData["ActivePage"] = ManageNavPages.ChangePassword;
 }
 
+<head>
+    <link rel="stylesheet" href="~/css/site.css" />
+</head>
+
 <h3>@ViewData["Title"]</h3>
 <partial name="_StatusMessage" for="StatusMessage" />
 <div class="row">
@@ -26,7 +30,7 @@
                 <label asp-for="Input.ConfirmPassword" class="form-label"></label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Spasi promjene</button>
+            <button type="submit" class="w-100 btn btn-lg btn-primary my-button">Spasi promjene</button>
         </form>
     </div>
 </div>
