--- a/Implementacija/Teatar18_2/Teatar18_2/Views/Izvedba/Edit.cshtml
+++ b/Implementacija/Teatar18_2/Teatar18_2/Views/Izvedba/Edit.cshtml
@@ -4,6 +4,10 @@
     ViewData["Title"] = "Edit";
 }
 
+<head>
+    <link rel="stylesheet" href="~/css/site.css" />
+</head>
+
 <h1>Edit</h1>
 
 <h4>Izvedba</h4>
@@ -14,29 +18,31 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ID" />
             <div class="form-group">
-                <label asp-for="IDPredstave" class="control-label"></label>
+                <label asp-for="IDPredstave" class="control-label">Predstava</label>
                 <select asp-for="IDPredstave" class="form-control" asp-items="ViewBag.IDPredstave"></select>
                 <span asp-validation-for="IDPredstave" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="vrijeme" class="control-label"></label>
+                <label asp-for="vrijeme" class="control-label">Vrijeme</label>
                 <input asp-for="vrijeme" class="form-control" />
                 <span asp-validation-for="vrijeme" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="brojSlobodnihKarata" class="control-label"></label>
+                <label asp-for="brojSlobodnihKarata" class="control-label">Broj slobodnih karata</label>
                 <input asp-for="brojSlobodnihKarata" class="form-control" />
                 <span asp-validation-for="brojSlobodnihKarata" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Spasi" class="btn btn-primary my-button" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <br />
+    <a asp-action="Index" class="my-link">Povratak na listu</a>
 </div>
 
 @section Scripts {
