--- a/Implementacija/Teatar18_2/Teatar18_2/Views/Rezervacija/OtkaziNeplaceneRezervacije.cshtml
+++ b/Implementacija/Teatar18_2/Teatar18_2/Views/Rezervacija/OtkaziNeplaceneRezervacije.cshtml
@@ -8,4 +8,4 @@
 
 <h3>Rezervacije su uspješno otkazane.</h3>
 
-<a asp-action="Index">Povratak na listu</a>
+<a asp-action="Index" class="my-link">Povratak na listu</a>
