--- a/Implementacija/Teatar18_2/Teatar18_2/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/Implementacija/Teatar18_2/Teatar18_2/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -4,6 +4,10 @@
     ViewData["Title"] = "Forgot your password?";
 }
 
+<head>
+    <link rel="stylesheet" href="~/css/site.css" />
+</head>
+
 <h1>@ViewData["Title"]</h1>
 <h2>Enter your email.</h2>
 <hr />
@@ -16,7 +20,7 @@
                 <label asp-for="Input.Email" class="form-label"></label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Reset Password</button>
+            <button type="submit" class="w-100 btn btn-lg btn-primary my-button">Reset Password</button>
         </form>
     </div>
 </div>
