--- a/Implementacija/Teatar18_2/Teatar18_2/Areas/Identity/Pages/Account/Manage/AktivneRezervacije.cshtml
+++ b/Implementacija/Teatar18_2/Teatar18_2/Areas/Identity/Pages/Account/Manage/AktivneRezervacije.cshtml
@@ -6,6 +6,10 @@
     ViewData["ActivePage"] = ManageNavPages.AktivneRezervacije;
 }
 
+<head>
+    <link rel="stylesheet" href="~/css/site.css" />
+</head>
+
 <div class="row">
     <div class="col-md-6">
         <h3>@ViewData["Title"]</h3>
@@ -45,10 +49,10 @@
                                 @if (!item.kupovina)
                                 {
                                     <td>
-                                        <button type="submit" name="id" value="@item.ID" asp-page-handler="Plati" class="btn btn-primary">Plati</button>
+                                        <button type="submit" name="id" value="@item.ID" asp-page-handler="Plati" class="btn btn-primary my-button-smaller">Plati</button>
                                     </td>
                                     <td>
-                                        <button type="submit" name="id" value="@item.ID" asp-page-handler="Otkazi" class="btn btn-danger">Otkaži</button>
+                                        <button type="submit" name="id" value="@item.ID" asp-page-handler="Otkazi" class="btn btn-danger my-button-danger">Otkaži</button>
                                     </td>
                                 }
                             </tr>
