--- a/Implementacija/Teatar18_2/Teatar18_2/Areas/Identity/Pages/Account/Manage/Email.cshtml
+++ b/Implementacija/Teatar18_2/Teatar18_2/Areas/Identity/Pages/Account/Manage/Email.cshtml
@@ -5,6 +5,10 @@
     ViewData["ActivePage"] = ManageNavPages.Email;
 }
 
+<head>
+    <link rel="stylesheet" href="~/css/site.css" />
+</head>
+
 <h3>@ViewData["Title"]</h3>
 <partial name="_StatusMessage" for="StatusMessage" />
 <div class="row">
@@ -34,7 +38,7 @@
                 <label asp-for="Input.NewEmail" class="form-label"></label>
                 <span asp-validation-for="Input.NewEmail" class="text-danger"></span>
             </div>
-            <button id="change-email-button" type="submit" asp-page-handler="ChangeEmail" class="w-100 btn btn-lg btn-primary">Spasi promjene</button>
+            <button id="change-email-button" type="submit" asp-page-handler="ChangeEmail" class="w-100 btn btn-lg btn-primary my-button">Spasi promjene</button>
         </form>
     </div>
 </div>
