--- a/Implementacija/Teatar18_2/Teatar18_2/Areas/Identity/Pages/Account/Manage/IstekleRezervacije.cshtml
+++ b/Implementacija/Teatar18_2/Teatar18_2/Areas/Identity/Pages/Account/Manage/IstekleRezervacije.cshtml
@@ -6,6 +6,10 @@
     ViewData["ActivePage"] = ManageNavPages.IstekleRezervacije;
 }
 
+<head>
+    <link rel="stylesheet" href="~/css/site.css" />
+</head>
+
 <div class="row">
     <div class="col-md-6">
         <h3>@ViewData["Title"]</h3>
@@ -34,7 +38,7 @@
                                 @if (!item.ocijenjena)
                                 {
                                     <td>
-                                        <button type="submit" name="id" value="@item.ID" asp-page-handler="Ocijeni" class="btn btn-primary">Ocijeni</button>
+                                        <button type="submit" name="id" value="@item.ID" asp-page-handler="Ocijeni" class="btn btn-primary my-button-smaller">Ocijeni</button>
                                     </td>
                                 }
                             </tr>
