--- a/Implementacija/Teatar18_2/Teatar18_2/Areas/Identity/Pages/Account/Manage/Kupovina.cshtml
+++ b/Implementacija/Teatar18_2/Teatar18_2/Areas/Identity/Pages/Account/Manage/Kupovina.cshtml
@@ -6,6 +6,10 @@
     ViewData["ActivePage"] = ManageNavPages.Kupovina;
 }
 
+<head>
+    <link rel="stylesheet" href="~/css/site.css" />
+</head>
+
 <div class="row">
     <div class="col-md-6">
         <h3>@ViewData["Title"]</h3>
@@ -41,7 +45,7 @@
                 <label asp-for="Input.CardholderName" class="form-label"></label>
                 <span asp-validation-for="Input.CardholderName" class="text-danger"></span>
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Plati</button>
+            <button type="submit" class="w-100 btn btn-lg btn-primary my-button">Plati</button>
         </form>
     </div>
 </div>
