--- a/Implementacija/Teatar18_2/Teatar18_2/Areas/Identity/Pages/Account/Manage/OcjenaPredstave.cshtml
+++ b/Implementacija/Teatar18_2/Teatar18_2/Areas/Identity/Pages/Account/Manage/OcjenaPredstave.cshtml
@@ -6,6 +6,10 @@
     ViewData["ActivePage"] = ManageNavPages.OcjenaPredstave;
 }
 
+<head>
+    <link rel="stylesheet" href="~/css/site.css" />
+</head>
+
 <div class="row">
     <div class="col-md-6">
         <h3>@ViewData["Title"]</h3>
@@ -23,9 +27,9 @@
                     <option value="5">5</option>
                 </select>
             </div>
-
+            <br />
             <div>
-                <button type="submit" class="btn btn-primary">Spasi</button>
+                <button type="submit" class="btn btn-primary my-button">Spasi</button>
             </div>
         </form>
     </div>
