--- a/Implementacija/Teatar18_2/Teatar18_2/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Implementacija/Teatar18_2/Teatar18_2/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,6 +4,10 @@
     ViewData["Title"] = "Registracija";
 }
 
+<head>
+    <link rel="stylesheet" href="~/css/site.css" />
+</head>
+
 <h1>@ViewData["Title"]</h1>
 
 <div class="row">
@@ -37,8 +41,14 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
                 <label asp-for="Input.ConfirmPassword">Potvrda passworda</label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+            </div>          
+            <div class="form-group form-check">
+                <label class="form-check-label">
+                    <input class="form-check-input" asp-for="Input.Newsletter" /> Newsletter
+                </label>
             </div>
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Registracija</button>
+            <br />
+            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary my-button">Registracija</button>
         </form>
     </div>
 </div>
