--- a/Implementacija/Teatar18_2/Teatar18_2/Views/Izvedba/Delete.cshtml
+++ b/Implementacija/Teatar18_2/Teatar18_2/Views/Izvedba/Delete.cshtml
@@ -4,36 +4,40 @@
     ViewData["Title"] = "Delete";
 }
 
+<head>
+    <link rel="stylesheet" href="~/css/site.css" />
+</head>
+
 <h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Jeste li sigurni da želite obrisati ovu izvedbu?</h3>
 <div>
     <h4>Izvedba</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.vrijeme)
+            Vrijeme
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.vrijeme)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.brojSlobodnihKarata)
+            Broj slobodnih karata
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.brojSlobodnihKarata)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Predstava)
+            Predstava
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Predstava.ID)
+            @Html.DisplayFor(model => model.Predstava.naziv)
         </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="ID" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger my-button" /> |
+        <a asp-action="Index" class="my-link">Povratak na listu</a>
     </form>
 </div>
