--- a/Implementacija/Teatar18_2/Teatar18_2/Views/Izvedba/Details.cshtml
+++ b/Implementacija/Teatar18_2/Teatar18_2/Views/Izvedba/Details.cshtml
@@ -4,6 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
+<head>
+    <link rel="stylesheet" href="~/css/site.css" />
+</head>
+
 <h1>Details</h1>
 
 <div>
@@ -11,26 +15,26 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.vrijeme)
+            Vrijeme
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.vrijeme)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.brojSlobodnihKarata)
+            Broj slobodnih karata
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.brojSlobodnihKarata)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Predstava)
+            Predstava
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Predstava.ID)
+            @Html.DisplayFor(model => model.Predstava.naziv)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.ID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.ID" class="my-link">Edit</a> |
+    <a asp-action="Index" class="my-link">Povratak na listu</a>
 </div>
