--- a/Implementacija/Teatar18_2/Teatar18_2/Views/Izvedba/Index.cshtml
+++ b/Implementacija/Teatar18_2/Teatar18_2/Views/Izvedba/Index.cshtml
@@ -4,22 +4,26 @@
     ViewData["Title"] = "Index";
 }
 
+<head>
+    <link rel="stylesheet" href="~/css/site.css" />
+</head>
+
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="my-red-link">Dodaj novu izvedbu</a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.vrijeme)
+                Vrijeme
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.brojSlobodnihKarata)
+                Broj slobodnih karata
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Predstava)
+                Predstava
             </th>
             <th></th>
         </tr>
@@ -34,12 +38,12 @@
                 @Html.DisplayFor(modelItem => item.brojSlobodnihKarata)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Predstava.ID)
+                @Html.DisplayFor(modelItem => item.Predstava.naziv)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.ID" class="my-red-link">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.ID" class="my-red-link">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.ID" class="my-red-link">Delete</a>
             </td>
         </tr>
 }
