--- a/Implementacija/Teatar18_2/Teatar18_2/Views/Izvedba/IzmjenaRepertoara.cshtml
+++ b/Implementacija/Teatar18_2/Teatar18_2/Views/Izvedba/IzmjenaRepertoara.cshtml
@@ -6,18 +6,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Izmjena repertoara</title>
-    <style>
-        body {
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-        }
+    <link rel="stylesheet" href="~/css/site.css" />
 
+    <style>
         .form-style {
             width: 80%;
             max-width: 600px;
-            margin-left: 20vh auto;
-            margin-right: 20vh auto;
             padding: 30px;
             background-color: #f9f9f9;
             border-radius: 10px;
@@ -25,13 +19,13 @@
         }
 
             .form-style label {
-                text-align: left; 
+                text-align: left;
             }
 
             .form-style h4 {
-                text-align: left; /* Align header text to the center */
-                margin-top: 0; /* Remove default margin */
-                color: #333; /* Header text color */
+                text-align: left;
+                margin-top: 0;
+                color: #333;
             }
 
         ul {
@@ -39,44 +33,13 @@
             padding: 0;
         }
 
-        li {
-            margin-bottom: 10px;
-        }
-
-        label {
-            display: block;
-            font-size: 18px;
-            cursor: pointer;
+        .my-li {
+            text-align: left;
         }
 
         input[type="checkbox"] {
             margin-right: 10px;
         }
-
-        button[type="submit"] {
-            background-color: #a10000;
-            color: white;
-            border: none;
-            padding: 12px 24px;
-            font-size: 18px;
-            cursor: pointer;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-        }
-
-            button[type="submit"]:hover {
-                background-color: #850000;
-            }
-
-        label {
-            margin-bottom: 8px; 
-        }
-
-        button[type="submit"] {
-            margin-top: 20px; 
-            width: 70%; 
-        }
-
     </style>
 </head>
 <body>
@@ -86,7 +49,7 @@
         <ul>
             @foreach (var predstava in ViewBag.Predstava)
             {
-                <li>
+                <li class="my-li">
                     <label>
                         <input type="checkbox" name="odabranePredstaveID" value="@predstava.ID">
                         @predstava.naziv
@@ -94,7 +57,7 @@
                 </li>
             }
         </ul>
-        <button type="submit">Submit</button>
+        <button type="submit" class="my-button">Submit</button>
 	</form></center>    
 
     <div><h1>&nbsp;</h1></div>
