--- a/Implementacija/Teatar18_2/Teatar18_2/Views/Izvedba/Predstava.cshtml
+++ b/Implementacija/Teatar18_2/Teatar18_2/Views/Izvedba/Predstava.cshtml
@@ -13,6 +13,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@Model.naziv</title>
+    <link rel="stylesheet" href="~/css/site.css" />
     <style>
         body {
             margin: 0;
@@ -76,20 +77,12 @@
         .btn-reserve {
             display: block;
             width: 70%;
-            padding: 10px;
-            background-color: #a10000;
-            color: white;
-            text-align: center;
-            text-decoration: none;
             margin-top: 10px;
+
         }
 
-            .btn-reserve:hover {
-                background-color: #850000;
-            }
-
         .custom-image {
-            max-width: 70%; /* Adjust this percentage as needed */
+            max-width: 70%; 
             height: auto;
         }
 
@@ -130,7 +123,9 @@
             </div>
             <div class="col col-3">
                 <img src="@Model.poster" alt="@Model.naziv poster" class="custom-image">
-                <a href="@Url.Action("Rezervisi", "Predstava", new { predstavaID = Model.ID })" class="btn-reserve">Rezerviši</a>
+                <button class="btn-reserve my-button ">
+                    <a href="@Url.Action("Rezervisi", "Predstava", new { predstavaID = Model.ID })" class="nav-link text-light">Rezerviši</a>
+                </button>  
             </div>
         </div>
         <div>&nbsp;</div>
