--- a/Implementacija/Teatar18_2/Teatar18_2/Views/Predstava/Delete.cshtml
+++ b/Implementacija/Teatar18_2/Teatar18_2/Views/Predstava/Delete.cshtml
@@ -4,69 +4,43 @@
     ViewData["Title"] = "Delete";
 }
 
+<head>
+    <link rel="stylesheet" href="~/css/site.css" />
+</head>
+
 <h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Jeste li sigurni da želite obrisati ovu predstavu?</h3>
 <div>
     <h4>Predstava</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.naziv)
+            Naziv
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.naziv)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.glumci)
+            Glumci
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.glumci)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.scenaristi)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.scenaristi)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.reziseri)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.reziseri)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.scenografi)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.scenografi)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.zanr)
+            Žanr
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.zanr)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.opis)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.opis)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.poster)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.poster)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.trajanje)
+            Trajanje
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.trajanje)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.uRepertoaru)
+            U repertoaru
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.uRepertoaru)
@@ -75,7 +49,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="ID" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger my-button" /> |
+        <a asp-action="Index" class="my-link">Povratak na listu</a>
     </form>
 </div>
