--- a/Implementacija/Teatar18_2/Teatar18_2/Views/Predstava/Details.cshtml
+++ b/Implementacija/Teatar18_2/Teatar18_2/Views/Predstava/Details.cshtml
@@ -6,66 +6,70 @@
 
 <h1>Details</h1>
 
+<head>
+    <link rel="stylesheet" href="~/css/site.css" />
+</head>
+
 <div>
     <h4>Predstava</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.naziv)
+            Naziv
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.naziv)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.glumci)
+            Glumci
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.glumci)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.scenaristi)
+            Scenaristi
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.scenaristi)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.reziseri)
+            Režiseri
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.reziseri)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.scenografi)
+            Scenografi
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.scenografi)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.zanr)
+            Žanr
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.zanr)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.opis)
+            Opis
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.opis)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.poster)
+            Poster
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.poster)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.trajanje)
+            Trajanje
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.trajanje)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.uRepertoaru)
+            U repertoaru
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.uRepertoaru)
@@ -73,6 +77,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.ID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.ID" class="my-link">Edit</a> |
+    <a asp-action="Index" class="my-link">Povratak na listu</a>
 </div>
