--- a/Implementacija/Teatar18_2/Teatar18_2/Views/Predstava/Rezervisi.cshtml
+++ b/Implementacija/Teatar18_2/Teatar18_2/Views/Predstava/Rezervisi.cshtml
@@ -6,6 +6,10 @@
 
 <h1>@ViewData["Title"]</h1>
 
+<head>
+    <link rel="stylesheet" href="~/css/site.css" />
+</head>
+
 @if(Model.Count() == 0)
 {
     <h3>Nema dostupnih izvedbi za ovu predstavu.</h3>
@@ -39,7 +43,7 @@ else
                         <td>
                             <form asp-controller="Rezervacija" asp-action="KreirajRezervaciju" method="get">
                                 <input type="hidden" name="id" value="@item.ID" />
-                                <button type="submit" class="btn btn-primary">Rezerviši</button>
+                                <button type="submit" class="btn btn-primary my-button-smaller">Rezerviši</button>
                             </form>
                         </td>
                     }
