--- a/Implementacija/Teatar18_2/Teatar18_2/Views/Rezervacija/Create.cshtml
+++ b/Implementacija/Teatar18_2/Teatar18_2/Views/Rezervacija/Create.cshtml
@@ -6,6 +6,10 @@
 
 <h1>@ViewData["Title"]</h1>
 
+<head>
+    <link rel="stylesheet" href="~/css/site.css" />
+</head>
+
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -35,7 +39,7 @@
             </div>
             <br />
             <div class="form-group">
-                <input type="submit" value="Kreiraj rezervaciju" class="btn btn-primary" />
+                <input type="submit" value="Kreiraj rezervaciju" class="btn btn-primary my-button" />
             </div>
         </form>
     </div>
