--- a/Implementacija/Teatar18_2/Teatar18_2/Views/Rezervacija/Kupovina.cshtml
+++ b/Implementacija/Teatar18_2/Teatar18_2/Views/Rezervacija/Kupovina.cshtml
@@ -4,6 +4,10 @@
     ViewData["Title"] = "Plaćanje";
 }
 
+<head>
+    <link rel="stylesheet" href="~/css/site.css" />
+</head>
+
 <div class="row">
     <div class="col-md-6">
         <h3>@ViewData["Title"]</h3>
@@ -48,7 +52,7 @@
             </div>
 
             <div class="form-group">
-                <input type="submit" value="Plati" class="w-100 btn btn-lg btn-primary" />
+                <input type="submit" value="Plati" class="w-100 btn btn-lg btn-primary my-button" />
             </div>
         </form>
     </div>
