--- a/Implementacija/Teatar18_2/Teatar18_2/Views/Shared/_Layout.cshtml
+++ b/Implementacija/Teatar18_2/Teatar18_2/Views/Shared/_Layout.cshtml
@@ -10,10 +10,12 @@
 </head>
 <body>
     <header>
-
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <div class="my-navbar">
+            <img src="https://i.ibb.co/996GYGr/logo.png" class="logo" />
+            <a class="navbar-brand text-light my-navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Teatar18</a>
+        </div>
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3 my-second-navbar">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Teatar18</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -21,13 +23,13 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Početna</a>
+                            <a class="nav-link text-grey" asp-area="" asp-controller="Home" asp-action="Index">Početna</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">O nama</a>
+                            <a class="nav-link text-grey" asp-area="" asp-controller="Home" asp-action="Privacy">O nama</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Pitanja" asp-action="PostavljanjePitanja">Pitanja</a>
+                            <a class="nav-link text-grey" asp-area="" asp-controller="Pitanja" asp-action="PostavljanjePitanja">Pitanja</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
