--- a/Implementacija/Teatar18_2/Teatar18_2/Views/Shared/_LoginPartial.cshtml
+++ b/Implementacija/Teatar18_2/Teatar18_2/Views/Shared/_LoginPartial.cshtml
@@ -2,25 +2,29 @@
 @inject SignInManager<Korisnik> SignInManager
 @inject UserManager<Korisnik> UserManager
 
+<head>
+    <link rel="stylesheet" href="~/css/site.css" />
+</head>
+
 <ul class="navbar-nav">
     @if (SignInManager.IsSignedIn(User))
     {
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
+            <a class="nav-link text-grey" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
         </li>
         <li class="nav-item">
             <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+                <button type="submit" class="nav-link my-logout-button"asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">Logout</button>
             </form>
         </li>
     }
     else
     {
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Registracija</a>
+            <a class="nav-link text-grey" asp-area="Identity" asp-page="/Account/Register">Registracija</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Prijava</a>
+            <a class="nav-link text-grey" asp-area="Identity" asp-page="/Account/Login">Prijava</a>
         </li>
     }
 </ul>
