--- a/Implementacija/Teatar18_2/Teatar18_2/Views/Shared/_Layout.cshtml
+++ b/Implementacija/Teatar18_2/Teatar18_2/Views/Shared/_Layout.cshtml
@@ -28,9 +28,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-grey" asp-area="" asp-controller="Home" asp-action="Privacy">O nama</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-grey" asp-area="" asp-controller="Pitanja" asp-action="PostavljanjePitanja">Pitanja</a>
-                        </li>
+                        @if (User.IsInRole("Korisnik"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-grey" asp-area="" asp-controller="Pitanja" asp-action="PostavljanjePitanja">Pitanja</a>
+                            </li>
+                        }                  
                         @if (User.IsInRole("Zaposlenik") || User.IsInRole("Administrator"))
                         {
                             <li class="nav-item">
@@ -51,7 +54,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - Teatar18_2
+            &copy; 2024 - Teatar18
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
